# EstrogenWL

./: .gitignore  Makefile  README.md  compile_flags.txt  meson.build  meson.options
include/: commands.h  config.h  filesystem.h  keybinding.h  output.h  server.h  session.h  wm.h
include/desktop/: desktop.h  foreign_toplevel.h  gamma_control_manager.h  layer_shell.h  layer_surface.h  output.h  scene.h  surface.h  xdg_popup.h  xdg_shell.h  xwayland.h
include/desktop/layers/: layer_popup.h  layer_shell.h  layer_surface.h
include/desktop/tree/: container.h  node.h  workspace.h
include/desktop/views/: decoration.h  toplevel_view.h  view.h  window.h  xwayland_view.h
include/desktop/windows/: popup.h  toplevel_window.h  window.h  window_container.h  xwayland_window.h
include/helpers/: xkb.h
include/input/: cursor.h  input_manager.h  keybind.h  keybind_list.h  keybinding.h  keyboard.h  seat.h
include/protocols/: cosmic-workspace-v1.h  ext-workspace-v1.h  transactions.h
include/types/: keybind.h  keybind_list.h  keyboard.h  output.h  server.h  xdg_shell.h
include/types/input/: input_manager.h  keybind.h  keybind_list.h  keyboard.h  seat.h
include/types/windows/: popup_window.h  toplevel_window.h
include/util/: filesystem.h  list.h  log.h  wl_macros.h
include/windows/: toplevel_window.h  xdg_shell.h
protocols/: cosmic-workspace-unstable-v1.xml  meson.build  wlr-layer-shell-unstable-v1.xml
src/: commands.c  config.c  filesystem.c  keybinding.c  log.c  main.c  output.c  server.c  session.c  wm.c
src/desktop/: desktop.c  foreign_toplevel.c  gamma_control_manager.c  layer_shell.c  layer_surface.c  output.c  popup.c  scene.c  surface.c  xdg_popup.c  xdg_shell.c  xwayland.c  xwayland_unmanaged.c
src/desktop/layer_shell/: layer_popup.c  layer_shell.c  layer_surface.c
src/desktop/layers/: layer_popup.c  layer_shell.c  layer_surface.c
src/desktop/tree/: container.c  node.c  view_container.c  workspace.c
src/desktop/views/: toplevel_view.c  view.c  window.c  xwayland_view.c
src/desktop/windows/: popup.c  toplevel_window.c  window.c  window_container.c  xwayland_window.c
src/input/: cursor.c  input_manager.c  keybind.c  keybind_list.c  keybinding.c  keyboard.c  seat.c
src/protocols/: cosmic-workspace-v1.c  ext-workspace-v1.c  transactions.c
src/types/: keybind.c  keybind_list.c  output.c  server.c  xdg_shell.c
src/types/input/: input_manager.c  keybind.c  keybind_list.c  keyboard.c  seat.c
src/types/windows/: popup_window.c  toplevel_window.c
src/util/: filesystem.c  list.c  log.c
src/windows/: gamma_control_manager.c  popup_window.c  surface.c  toplevel_window.c  xdg_shell.c
subprojects/: wlroots.wrap
